fixed tests to pass pipeline
