# review-microservice/src/main/resources/BookManiaReviewopenapi.yaml
@@ -339,18 +339,27 @@ paths:
                 type: string
                 description: Error Message
                 example: cannot find user.
-  /report/review:
+  /report/review/{reviewId}:
     post:
       tags:
         - report
       summary: reporting a review
       description: the review is set as reported and can be assessed by the admin for deletion or user ban
+      parameters:
+        - name: reviewId
+          in: path
+          description: the review to be reported
+          required: true
+          schema:
+            type: integer
+            format: int64
       requestBody:
-        description: the review that is reported
+        description: the reason for reporting
         content:
-          application/json:
+          text/plain:
             schema:
-              $ref: '#/components/schemas/Review'
+              type: string
+              example: foul language
         required: true
       responses:
         '200':
@@ -367,18 +376,27 @@ paths:
                 type: string
                 description: Error message
                 example: error saving report.
-  /report/comment:
+  /report/comment/{commentId}:
     post:
       tags:
         - report
       summary: reporting a comment
       description: the comment is set as reported and can be assessed by the admin for deletion or user ban
+      parameters:
+        - name: commentId
+          in: path
+          description: the comment to be reported
+          required: true
+          schema:
+            type: integer
+            format: int64
       requestBody:
-        description: the comment that is reported
+        description: the reason for reporting
         content:
-          application/json:
+          text/plain:
             schema:
-              $ref: '#/components/schemas/Comment'
+              type: string
+              example: foul language
         required: true
       responses:
         '200':
